<resources>
    <string name="app_name">Note</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit">Save</string>
    <string name="edit_content_hint">记下你的心情...</string>
    <string name="item">Item1</string>
    <string name="account">Account</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_account">账号</string>
    <string name="login_password">密码</string>
    <string name="login_button">登录</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_new_user">新用户？</string>
</resources>
