<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.scheming.note.ui.LoginActivity">

    <include
        android:id="@+id/login_app_bar"
        layout="@layout/app_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_app_bar"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="80dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="48dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_account"
                android:imeOptions="actionNext" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_primary"
                android:text="@string/login_button"
                android:textColor="@color/frame_white" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/login_new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:clickable="true"
        android:paddingBottom="8dp"
        android:paddingRight="8dp"
        android:text="@string/login_new_user"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/holo_blue_dark" />

</RelativeLayout>

